--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,43 +1,73 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply from: '../android_commons.gradle'
 
 android {
-    compileSdk 32
-
     defaultConfig {
-        applicationId "org.nathit.cryptocurrency"
-        minSdk 26
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        applicationId ApplicationId.id
+        versionCode Releases.versionCode
+        versionName Releases.versionName
+    }
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    buildFeatures {
+        dataBinding = true
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
+            manifestPlaceholders += [crashlyticsEnabled: true]
+        }
+        debug {
+            ext.alwaysUpdateBuildId = false
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+
+    flavorDimensions "version"
+    productFlavors {
+        dev {
+            dimension "version"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+            buildConfigField "String", "BASE_API_URL", '"https://api.github.com/"'
+        }
+        uat {
+            dimension "version"
+            applicationIdSuffix ".uat"
+            versionNameSuffix "-uat"
+            buildConfigField "String", "BASE_API_URL", '""'
+        }
+        prod {
+            dimension "version"
+            buildConfigField "String", "BASE_API_URL", '""'
+        }
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+
 }
 
-dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+dependencies {
+    implementation project(Modules.commonRes)
+    implementation project(Modules.data)
+    implementation project(Modules.domain)
+    implementation project(Modules.navigation)
+
+    implementation Deps.material
+    implementation Deps.koin
+    implementation Deps.koinViewModel
+    implementation Deps.appcompat
+    implementation Deps.navigationUi
+    implementation Deps.navigationFragment
+    implementation Deps.stetho
+    implementation Deps.coreKtx
+
+    debugImplementation Deps.chucker
+    releaseImplementation Deps.chuckerNoOp
+
+    testImplementation TestDeps.junit
+    testImplementation TestDeps.koin
+    testImplementation TestDeps.mockk
 }
