--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,26 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+buildscript {
+    ext {
+        kotlin_version = '1.5.20'
+    }
+    repositories {
+        google()
+        jcenter()
+    }
+
+    dependencies {
+        classpath Deps.androidGradlePlugin
+        classpath Deps.kotlinGradlePlugin
+        classpath Deps.kotlinExtensions
+        classpath Deps.navigationSafeArgsGradlePlugin
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
 }
 
 task clean(type: Delete) {
