--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,7 @@
-pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        google()
-        mavenCentral()
-    }
-}
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-rootProject.name = "cryptocurrency-android"
 include ':app'
+include ':common-res'
+include ':common-ui'
+include ':data'
+include ':domain'
+include ':navigation'
+include ':features:home'
