--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
             dimension "version"
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
-            buildConfigField "String", "BASE_API_URL", '"https://api.github.com/"'
+            buildConfigField "String", "BASE_API_URL", '"https://api2.binance.com/api/"'
         }
         uat {
             dimension "version"
